--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -16,7 +16,7 @@
     <string name="activity_screen_title">Aktiviteetti suunnittelija</string>
     <string name="activity_screen_activity_label">Valitse aktiviteetti</string>
     <string name="activity_screen_activity_prompt">Valitse aktiviteetti...</string>
-    <string name="activity_screen_time_label">Valitse aika</string>
+    <string name="activity_screen_end_time_label">Valitse lopetus aika</string>
     <string name="activity_screen_time_prompt">Valitse aika...</string>
     <string name="activity_screen_search_button">Hae</string>
     <string name="activity_screen_location_label">Valitse sijainti</string>
@@ -57,5 +57,6 @@
     <string name="weather_screen_weather_detail_five_day_forecast">5 päivän ennuste</string>
     <string name="weather_screen_search_bar_hint">Hae kaupunkia tai sijaintia</string>
     <string name="weather_screen_search_bar_icon_description">Hae</string>
+    <string name="activity_screen_start_time_label">"Valitse aloitus aika "</string>
 
 </resources>
