replaced string add to cart to view item

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -45,11 +45,11 @@
     <string name="shopping_screen_title">Säävarusteiden kauppa</string>
     <string name="shopping_screen_recommended_items_section_title">Suositellaan nykyiseen säähän</string>
     <string name="shopping_screen_all_items_section_title">Kaikki tuotteet</string>
-    <string name="shopping_screen_add_to_cart_button">Lisää ostoskoriin</string>
 
     <string name="weather_screen_weather_detail_humidity">Kosteus</string>
     <string name="weather_screen_weather_detail_wind_speed">Tuulen nopeus</string>
     <string name="weather_screen_weather_detail_visibility">Näkyvyys</string>
+    <string name="shopping_screen_view_listing_button">Katso tuote</string>
     <string name="weather_screen_weather_detail_title">Säätiedot</string>
     <string name="weather_screen_weather_detail_pressure">Paine</string>
     <string name="weather_screen_weather_detail_sunrise">Auringonnousu</string>
