feat(weather): Add location management and GPS support
This commit introduces significant enhancements to the weather screen:
- Users can now add multiple city locations to a carousel.
- GetCurrentWeather.kt and GetForecast.kt now get the data primarily with location/city name and then with coordinates.
- Added locations can be removed via a close icon on the weather card.
- The UI now displays a loading indicator while fetching data and shows a message if no locations are added.
- The pager indicator now uses a location icon to distinguish the GPS-based forecast.
- Weather data fetching logic is refactored to handle multiple saved locations, GPS coordinates, and user settings for units and language.
- Data models for weather (`WeatherData`, `DailyForecast`) are moved to a dedicated `ui/model` package.
- The WeatherMapper is moved to its own file from the WeatherViewModel.kt.

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="nav_search">Hae</string>
     <string name="nav_weather">Sää</string>
-    <string name="nav_activity">Aktiivisuus/Aktiviteetti</string>
+    <string name="nav_activity">Aktiviteetti</string>
     <string name="nav_shopping">Shoppaile</string>
     <string name="nav_settings">Asetukset</string>
     <string name="nav_history">Historia</string>
@@ -58,5 +58,8 @@
     <string name="weather_screen_search_bar_hint">Hae kaupunkia tai sijaintia</string>
     <string name="weather_screen_search_bar_icon_description">Hae</string>
     <string name="activity_screen_start_time_label">"Valitse aloitus aika "</string>
+    <string name="weather_screen_search_bar_location_icon_description">Käytä nykyistä sijaintia</string>
+    <string name="weather_screen_gps_icon_description">Nykyinen sijainti</string>
+    <string name="weather_screen_remove_location_description">Poista sijainti</string>
 
 </resources>
