--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -21,6 +21,19 @@
     <string name="activity_screen_search_button">Hae</string>
     <string name="activity_screen_location_label">Valitse sijainti</string>
     <string name="activity_screen_location_prompt">Valitse sijainti…</string>
+    <string name="activity_screen_time_error_adjusted">End time was automatically adjusted.</string>
+    <string name="activity_screen_time_error_invalid">End time must be after start time.</string>
+    <string name="activity_screen_generic_error">Something went wrong. Please try again</string>
+    <string name="activity_screen_suitability">Suitability</string>
+    <string name="activity_screen_weather_tips">Weather Tips</string>
+    <string name="activity_screen_clothing_tips">Clothing Tips</string>
+    <string name="activity_screen_hide_options">Hide options</string>
+    <string name="activity_screen_show_options">Show options</string>
+    <string name="activity_screen_very_bad">Very Bad</string>
+    <string name="activity_screen_bad">Bad</string>
+    <string name="activity_screen_fair">Fair</string>
+    <string name="activity_screen_good">Good</string>
+    <string name="activity_screen_very_good">Very Good</string>
 
     <string name="history_screen_title">Aktiiviteetti historia</string>
     <string name="history_screen_view_previous_activity_search">Tarkastele aiempia aktiivisuus hakuja ja ehtoja</string>
