--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -46,7 +46,8 @@
     <string name="settings_screen_dark_mode_title">Tumma tila</string>
     <string name="activity_screen_no_matches">Osumia ei löytynyt</string>
     <string name="settings_screen_dark_mode_sub_title">Säädä sovelluksen teemaa</string>
-    <string name="settings_screen_currency">Valitse valuutta</string>
+    <string name="settings_screen_currency">Valuutta</string>
+    <string name="settings_screen_select_currency">Valitse valuutta</string>
     <string name="settings_screen_section_header_units">Yksiköt</string>
     <string name="settings_screen_unit_item_title">Yksikköjärjestelmä</string>
     <string name="settings_screen_dialog_confirm_button">OK</string>
