refactor(widget): use WorkManager for background updates
This commit refactors the weather widget to use `WorkManager` for background data fetching, making it more reliable and efficient.

Key changes include:
- Add a `WeatherWidgetWorker` to handle fetching weather data in the background.
- Integrate `HiltWorkerFactory` for dependency injection in workers.
- The widget now reads data from `DataStore` and no longer fetches data directly, simplifying the UI layer.
- Update `WeatherWidgetReceiver` to enqueue the worker on updates and when enabled.
- Remove direct data fetching logic from the widget composable and `onAction` callbacks.
- Add necessary dependencies for Hilt-Work and update Glance versions.
- Refine the widget's UI and add new string resources.

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -72,5 +72,7 @@
     <string name="weather_screen_search_bar_location_icon_description">Käytä nykyistä sijaintia</string>
     <string name="weather_screen_gps_icon_description">Nykyinen sijainti</string>
     <string name="weather_screen_remove_location_description">Poista sijainti</string>
+    <string name="widget_no_data">Ei tietoja</string>
+    <string name="widget_tap_to_open">Avaa napauttamalla</string>
 
 </resources>
