Replace "..." with ellipsis character

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,7 @@
     <string name="weather_screen_weather_detail_sunrise">Sunrise</string>
     <string name="weather_screen_weather_detail_sunset">Sunset</string>
     <string name="weather_screen_weather_detail_five_day_forecast">5-Day Forecast</string>
-    <string name="weather_screen_search_bar_hint">Search for a city or location...</string>
+    <string name="weather_screen_search_bar_hint">Search for a city or location…</string>
     <string name="weather_screen_search_bar_icon_description">Search</string>
     <string name="weather_screen_search_bar_location_icon_description">Use Current Location</string>
     <string name="weather_screen_gps_icon_description">Current Location</string>
