--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -15,13 +15,13 @@
 
     <string name="activity_screen_title">Aktiviteetti suunnittelija</string>
     <string name="activity_screen_activity_label">Valitse aktiviteetti</string>
-    <string name="activity_screen_activity_prompt">Valitse aktiviteetti...</string>
+    <string name="activity_screen_activity_prompt">Valitse aktiviteetti…</string>
     <string name="activity_screen_start_time_label">Valitse aloitus aika</string>
     <string name="activity_screen_end_time_label">Valitse lopetus aika</string>
-    <string name="activity_screen_time_prompt">Valitse aika...</string>
+    <string name="activity_screen_time_prompt">Valitse aika…</string>
     <string name="activity_screen_search_button">Hae</string>
     <string name="activity_screen_location_label">Valitse sijainti</string>
-    <string name="activity_screen_location_prompt">Valitse sijainti...</string>
+    <string name="activity_screen_location_prompt">Valitse sijainti…</string>
     <string name="activity_screen_time_error_adjusted">Päättymisaika säädettiin automaattisesti.</string>
     <string name="activity_screen_time_error_invalid">Päättymisajan on oltava alkamisajan jälkeen.</string>
     <string name="activity_screen_generic_error">Jotain meni pieleen. Yritä uudelleen.</string>
