--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,12 +17,12 @@
     <!-- ui - screens - ActivityScreen -->
     <string name="activity_screen_title">Activity Planner</string>"
     <string name="activity_screen_location_label">Select Location</string>
-    <string name="activity_screen_location_prompt">Choose a location...</string>
+    <string name="activity_screen_location_prompt">Choose a location…</string>
     <string name="activity_screen_activity_label">Select Activity</string>
-    <string name="activity_screen_activity_prompt">Choose an activity...</string>
+    <string name="activity_screen_activity_prompt">Choose an activity…</string>
     <string name="activity_screen_start_time_label">Select Start Time</string>
     <string name="activity_screen_end_time_label">Select End Time</string>
-    <string name="activity_screen_time_prompt">Choose a time...</string>
+    <string name="activity_screen_time_prompt">Choose a time…</string>
     <string name="activity_screen_search_button">Search</string>
     <string name="activity_screen_no_matches">No matches found</string>
     <string name="activity_screen_time_error_adjusted">End time was automatically adjusted.</string>
