Update resource string key names

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,25 +16,25 @@
 
     <!-- ui - screens - ActivityScreen -->
     <string name="activity_screen_title">Activity Planner</string>"
-    <string name="activity_screen_location_label">Select Location</string>
-    <string name="activity_screen_location_prompt">Choose a location…</string>
-    <string name="activity_screen_activity_label">Select Activity</string>
-    <string name="activity_screen_activity_prompt">Choose an activity…</string>
-    <string name="activity_screen_start_date_label">Select Start Date</string>
+    <string name="location_label">Select Location</string>
+    <string name="location_prompt">Choose a location…</string>
+    <string name="activity_label">Select Activity</string>
+    <string name="activity_prompt">Choose an activity…</string>
+    <string name="start_time_label">Select Start Date</string>
     <string name="activity_screen_end_date_label">Select End Date</string>
     <string name="activity_screen_start_time_label">Select Start Time</string>
-    <string name="activity_screen_end_time_label">Select End Time</string>
-    <string name="activity_screen_time_prompt">Choose a time…</string>
-    <string name="activity_screen_search_button">Search</string>
-    <string name="activity_screen_no_matches">No matches found</string>
-    <string name="activity_screen_time_error_adjusted">End time was automatically adjusted.</string>
-    <string name="activity_screen_time_error_invalid">End time must be after start time.</string>
-    <string name="activity_screen_generic_error">Something went wrong. Please try again</string>
-    <string name="activity_screen_suitability">Suitability</string>
-    <string name="activity_screen_weather_tips">Weather Tips</string>
-    <string name="activity_screen_clothing_tips">Clothing Tips</string>
-    <string name="activity_screen_hide_options">Hide options</string>
-    <string name="activity_screen_show_options">Show options</string>
+    <string name="end_time_label">Select End Time</string>
+    <string name="time_prompt">Choose a time…</string>
+    <string name="search_button_label">Search</string>
+    <string name="no_matches_found">No matches found</string>
+    <string name="time_error_adjusted">End time was automatically adjusted.</string>
+    <string name="time_error_invalid">End time must be after start time.</string>
+    <string name="generic_error">Something went wrong. Please try again</string>
+    <string name="suitability">Suitability</string>
+    <string name="weather_tips">Weather Tips</string>
+    <string name="clothing_tips">Clothing Tips</string>
+    <string name="hide_options">Hide options</string>
+    <string name="show_options">Show options</string>
     <string name="add_activity_title">Add activity</string>
     <string name="add_activity_prompt">Type new activity name…</string>
     <string name="confirm_button_label">Confirm</string>
