--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -14,24 +14,24 @@
     <string name="button_disabled">Pois käytöstä</string>
 
     <string name="activity_screen_title">Aktiviteetti suunnittelija</string>
-    <string name="activity_screen_activity_label">Valitse aktiviteetti</string>
-    <string name="activity_screen_activity_prompt">Valitse aktiviteetti…</string>
-    <string name="activity_screen_start_date_label">Valitse aloituspäivämäärä</string>
+    <string name="activity_label">Valitse aktiviteetti</string>
+    <string name="activity_prompt">Valitse aktiviteetti…</string>
+    <string name="start_time_label">Valitse aloituspäivämäärä</string>
     <string name="activity_screen_end_date_label">Valitse päättymispäivä</string>
     <string name="activity_screen_start_time_label">Valitse aloitus aika</string>
-    <string name="activity_screen_end_time_label">Valitse lopetus aika</string>
-    <string name="activity_screen_time_prompt">Valitse aika…</string>
-    <string name="activity_screen_search_button">Hae</string>
-    <string name="activity_screen_location_label">Valitse sijainti</string>
-    <string name="activity_screen_location_prompt">Valitse sijainti…</string>
-    <string name="activity_screen_time_error_adjusted">Päättymisaika säädettiin automaattisesti.</string>
-    <string name="activity_screen_time_error_invalid">Päättymisajan on oltava alkamisajan jälkeen.</string>
-    <string name="activity_screen_generic_error">Jotain meni pieleen. Yritä uudelleen.</string>
-    <string name="activity_screen_suitability">Suitability</string>
-    <string name="activity_screen_weather_tips">Säävinkkejä</string>
-    <string name="activity_screen_clothing_tips">Pukeutumis vinkkejä</string>
-    <string name="activity_screen_hide_options">Piilota vaihtoehdot</string>
-    <string name="activity_screen_show_options">Näytä vaihtoehdot</string>
+    <string name="end_time_label">Valitse lopetus aika</string>
+    <string name="time_prompt">Valitse aika…</string>
+    <string name="search_button_label">Hae</string>
+    <string name="location_label">Valitse sijainti</string>
+    <string name="location_prompt">Valitse sijainti…</string>
+    <string name="time_error_adjusted">Päättymisaika säädettiin automaattisesti.</string>
+    <string name="time_error_invalid">Päättymisajan on oltava alkamisajan jälkeen.</string>
+    <string name="generic_error">Jotain meni pieleen. Yritä uudelleen.</string>
+    <string name="suitability">Soveltuvuus</string>
+    <string name="weather_tips">Säävinkkejä</string>
+    <string name="clothing_tips">Pukeutumis vinkkejä</string>
+    <string name="hide_options">Piilota vaihtoehdot</string>
+    <string name="show_options">Näytä vaihtoehdot</string>
     <string name="add_activity_title">Lisää aktiviteetti</string>
     <string name="add_activity_prompt">Kirjoita uuden aktiviteetin nimi…</string>
     <string name="confirm_button_label">Vahvistaa</string>
@@ -50,7 +50,7 @@
     <string name="settings_screen_language_title">Kieli</string>
     <string name="settings_screen_language_dialog_title">Valitse kieli</string>
     <string name="settings_screen_app_theme_title">Sovelluksen teema</string>
-    <string name="activity_screen_no_matches">Osumia ei löytynyt</string>
+    <string name="no_matches_found">Osumia ei löytynyt</string>
     <string name="settings_screen_currency">Valuutta</string>
     <string name="settings_screen_select_currency">Valitse valuutta</string>
     <string name="settings_screen_dialog_dismiss_button">Hylkää</string>
