--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -96,4 +96,7 @@
     <string name="widget_tap_to_open">Avaa napauttamalla</string>
     <string name="widget_description">Näyttää nykyisen säätilan tallennetulle sijainnille</string>
     <string name="activity_screen_subtitle">Suunnittele aktiviteetti tietyn paikan sääolosuhteiden perusteella</string>
+    <string name="no_activities">Ei aktiviteetteja! Lisää yksi ensin</string>
+    <string name="no_locations">There are no locations! Check the tooltip for information</string>
+    <string name="location_tooltip">Sijainnit hallitaan Sää-sivulta. Kaikki sinne lisätyt sijainnit ovat käytettävissä aktiviteettien suunnittelussa.</string>
 </resources>
