--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -99,4 +99,6 @@
     <string name="no_activities">Ei aktiviteetteja! Lisää yksi ensin</string>
     <string name="no_locations">Ei sijainteja! Lisää ne Sää-sivulle. Katso lisätietoja työkaluvihjeestä</string>
     <string name="location_tooltip">Sijainnit hallitaan Sää-sivulta. Kaikki sinne lisätyt sijainnit ovat käytettävissä aktiviteettien suunnittelussa.</string>
+    <string name="clothing_tips_alert_title">Pukeutumis vinkkejä</string>
+    <string name="clothing_tips_alert_message">Klikkaa pukeutumisvinkkien päältä nähdääksesi tuotteet Säävarusteiden kaupasta!</string>
 </resources>
