--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="add_activity_prompt">Type new activity name…</string>
     <string name="confirm_button_label">Confirm</string>
     <string name="cancel_button_label">Cancel</string>
+    <string name="shop_message_card_description">Click below to see the recommended clothing items in the Weather Gear Shop!</string>
+    <string name="shop_message_card_button_text">Go to Shop</string>
 
 
     <!-- ui - screens - HistoryScreen -->
@@ -110,7 +112,5 @@
     <string name="no_activities">There are no activities! Please add one first</string>
     <string name="no_locations">There are no locations! Add them in the Weather page. Check the tooltip for more information</string>
     <string name="location_tooltip">Locations are managed from the Weather page. Any locations added there will be available to use in the activity planner</string>
-    <string name="clothing_tips_alert_title">Clothing Tips</string>
-    <string name="clothing_tips_alert_message">Click on the clothing tips to see the items in Weather Gear Shop!</string>
 
 </resources>
